--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -7,6 +7,8 @@
 
 #about{
     padding: 4rem 0 4rem;
+    background-color: rgb(0, 0, 0, .5);
+    width: 100%
 }
 
 #about-h5{
@@ -27,10 +29,11 @@
     justify-content: center;
     max-width: fit-content;
     align-self: center;
+    max-width: 75vw;
 }
 
 .about-p{
-    width: 80%;
+    max-width: 30rem;
     text-align: justify;
 }
 
@@ -63,7 +66,7 @@
     }
 
     #about{
-        width: var(--container-width-phone);
+        width: 100%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -73,7 +76,7 @@
 @media (max-width:768px){
 
     #about{
-        width:var(--container-width-768);
+        width:100%;
     }
     
 
