--- a/src/components/socials/socials.css
+++ b/src/components/socials/socials.css
@@ -3,13 +3,21 @@
     display: flex;
     flex-direction: column;
     justify-content: end;
-    height: 90vh;
+    height: 95vh;
     width:12.5%;
-    
 }
-
 
 .socials-div a{
     color:var(--text-less-white);
     opacity: .9;
+}
+
+.vertical-line{
+    height: 4rem;
+    width: 0.12rem;
+    border-radius: 10px;
+    background-color:var(--text-less-white);
+    align-self: center;
+    opacity: .9;
+    margin-top: 1rem;
 }
